# bat-chirp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: site.example.json
docs/: configuration.md  upstream-projects.md  usage.md
docs/screenshots/@eaDir/: spectrogram_231145.png@SynoEAStream
local/: inspect_remote_night_artifacts.ps1
scripts/: export_review_batch.py  export_review_clip.py  run_batdetect2.py  run_night_for_date.sh  run_night_pipeline.py  setup_host.sh  summarize_batdetect2.py
src/batpipe/: __init__.py  aggregate.py  audiomoth.py  batch_validate.py  detect.py  noise_floor.py  pipeline.py  review_site.py  review_site_render.py  site_config.py  validate.py
src/batpipe/assets/: style.css
src/batpipe/review/: __init__.py  acoustic.py  activity_extent_results.py  activity_segment_builders.py  activity_segment_evidence.py  activity_segment_modules.json  activity_segment_selection.py  activity_segments.py  activity_signal.py  annotation_builders.py  audio.py  band_analysis.py  batch.py  clip.py  detection.py  model_activity.py  model_annotations.py  model_detection.py  model_review.py  models.py  report.py  spectrogram.py
tests/: test_aggregate.py  test_audiomoth.py  test_batch_validate.py  test_detect.py  test_noise_floor.py  test_pipeline.py  test_review_acoustic.py  test_review_batch.py  test_review_site.py  test_site_config.py  test_validate.py
