[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "batpipe"
version = "0.1.0"
description = "Detector-first pipeline for AudioMoth overnight bat activity analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"matplotlib>=3.8",
	"numpy>=1.26",
	"scipy>=1.12",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3",
	"ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
batpipe = ["assets/*.css"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E9", "F", "I"]
